[gd_scene load_steps=8 format=2]

[ext_resource path="res://Stages_Reina/NPCs/NPC_Base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Character Sprites/m16/m16dash.png" type="Texture" id=2]
[ext_resource path="res://Character Sprites/m16/m16.tres" type="SpriteFrames" id=3]
[ext_resource path="res://ParticleEffects/GreyscaleShader.tres" type="Material" id=4]
[ext_resource path="res://Stages_Reina/Bosses/M16/heaven.tscn" type="PackedScene" id=5]
[ext_resource path="res://Stages_Reina/NPCs/NPC_M16_Fake.gd" type="Script" id=6]
[ext_resource path="res://Stages_Reina/NPCs/NPC_M16_Fake_heaven.gd" type="Script" id=7]

[node name="FakeM16" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="AnimatedSprite" parent="." index="1"]
position = Vector2( 0, -14 )
frames = ExtResource( 3 )
animation = "Begin"
flip_h = true

[node name="AfterImage1" type="Sprite" parent="AnimatedSprite" index="0"]
visible = false
modulate = Color( 0.788235, 0.788235, 0.788235, 0.54902 )
show_behind_parent = true
material = ExtResource( 4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 40, 32 )

[node name="AfterImage2" type="Sprite" parent="AnimatedSprite" index="1"]
visible = false
modulate = Color( 0.788235, 0.788235, 0.788235, 0.305882 )
show_behind_parent = true
material = ExtResource( 4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 40, 32 )

[node name="AfterImage3" type="Sprite" parent="AnimatedSprite" index="2"]
visible = false
modulate = Color( 0.788235, 0.788235, 0.788235, 0.196078 )
show_behind_parent = true
material = ExtResource( 4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 40, 32 )

[node name="RayCast2D" type="RayCast2D" parent="." index="2"]
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="Heaven" parent="." index="3" instance=ExtResource( 5 )]
script = ExtResource( 7 )
